--- a/src/app/ui/components/main-header/main-header.component.html
+++ b/src/app/ui/components/main-header/main-header.component.html
@@ -1,13 +1,13 @@
 <header class="main-header">
     <div class="container">
       <div class="header-content">
-        <div class="logo">
-            <!-- <img src="circle-logo.png" alt="TUMin Logo" class="logo-image"> -->
-            <div class="logo-text">
-              <span class="tum">TUM</span><span class="in" translate="no">in</span>
-              <span class="logo-subtext" style=" margin-left: 10px; font-style: italic;" translate="yes">For All Industrial Products</span>
+            <div class="logo">
+              <img src="assets/homecard/tumin-logo.png" alt="TUMin Logo" class="logo-image">
+              <div class="logo-text">
+                <span class="in" translate="no">in</span>
+                <span class="logo-subtext" translate="yes">For All Industrial Products</span>
+              </div>
             </div>
-          </div>
         <nav class="main-nav">
           <ul class="nav-list">
             <li *ngIf="authService.isAuthenticated">
