--- a/src/app/ui/components/navbar/navbar.component.scss
+++ b/src/app/ui/components/navbar/navbar.component.scss
@@ -1,5 +1,6 @@
 .navbar-container{
   background: #003366;
+  height: 64px;
 }
 .industrial-navbar {
   font-family: Arial, sans-serif;
@@ -219,8 +220,8 @@
   }
 
   .dropdown-overlay {
-    position: absolute; // absolute yerine fixed kullanıyoruz
-    top: 154px;
+    position: fixed; // absolute yerine fixed kullanıyoruz
+    top: 184px;
     left: 0;
     right: 0;
     bottom: 0; // Ekranın altına kadar uzansın
@@ -313,8 +314,8 @@
           padding: 0;
 
           li {
-            padding: 5px 20px;
-            font-size: 1rem;
+            padding: 5px 5px 0 20px;
+            font-size: 14px;
             cursor: pointer;
 
             &:hover, &.active {
