--- a/src/app/ui/components/search-results/search-results.component.scss
+++ b/src/app/ui/components/search-results/search-results.component.scss
@@ -83,6 +83,14 @@ $hover-color: rgba($primary-color, 0.1);
           object-fit: cover;
           //border-radius: 4px 4px 0 0;
         }
+        .no-image {
+          width: 100%;
+          height: 100%;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+         
+        }
 
         .heart-icon {
           //dışında yuvarlak bir buton oluşturmak için
